# orthocache

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  orthocache-phaseD-v1.ipynb  orthocache-phaseD-v2.ipynb  orthocache-phaseE-v1.ipynb  orthocache-phaseE-v3.ipynb  pyproject.toml  task.md
benchmarks/: attention_accuracy.py  compaction_benchmark.py  generate_figures.py  phase_d7_vmap_indirect.py  phase_d_indirect_dma.py  phase_d_plwhen.py  phase_e_alltoallv.py  phase_e_stratified.py  profiling.py  spectral_analysis.py
benchmarks/results/: orthocache_v4_31b_results.json  orthocache_v4_summary.csv  phase_d5_loop_indirection_results.json  phase_d7_vmap_results.json  phase_d_compaction_results.json  phase_e2_stratified_results.json
docs/: cost_benefit_analysis.md  mathematical_framework.md  technical_report.md  xla_pass_design.md
notebooks/: cell6_dynamic_benchmark.py  cell7_bucketed_benchmark.py  kaggle_tpu_setup.py  orthocache_v5_benchmark.ipynb  phase_d_kaggle.py
paper/: .gitignore  orthocache_techrvix.tex
proofs/: OrthoCacheMath.lean
proofs/OrthoCacheMath/: ParsevalWHT.lean  TruncationBound.lean
src/orthocache/: __init__.py  adaptive_attention.py  alltoallv.py  fwht.py  (+14 more)
tests/: test_adaptive_attention.py  test_alltoallv.py  test_attention.py  test_compaction.py  test_distributed.py  test_energy.py  test_fwht.py  test_ici_bandwidth.py  test_indirect_attention.py  test_pipeline.py  test_spectral_bands.py  test_truncation_bound.py
xla_extensions/: BUILD  orthocache_stream_compact.cc  orthocache_stream_compact.h  orthocache_stream_compact_test.cc
